Week 9 updates